# kingdom-clicker

./: .gitignore  README.md  TODO.md  game_state.py  kclicker.py  linen.json  pyproject.toml  quarry.json  ranger.json  tree.md
kingdom_clicker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: install_latest.py
