[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kingdom-clicker"
version = "0.1.1a1"
description = "Headless-friendly Kingdom Clicker simulation with Tk UI."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
kclicker = "kclicker:main"

[tool.setuptools]
py-modules = ["kclicker", "game_state"]
